Add executor with 15 pooled threads to process games concurrently